--- a/rateJokes.html
+++ b/rateJokes.html
@@ -17,8 +17,8 @@
                 padding: 2rem;
                 margin: 2rem;
                 border: medium solid;
-                min-height: 1em;
-                min-width: 1em;
+                min-height: 0.5em;
+                min-width: 0.5em;
             }
             .button {
                 cursor: pointer;
@@ -31,48 +31,65 @@
                 color: green;
             }
             .value {
-                min-width: 2em;
+                min-width: 1em;
             }
             .state {
                 font-size: 2em;
             }
+            .A
+            {
+             font-weight:bold;
+            }
         </style>
     </head>
     <body>
+        <h1>Always on the hour a new joke! Rate it!!!</h1>
+        <h3 id="q">?</h3>
+        <h3 id="a">?</h3>
         <div class="buttons">
             <div class="minus button">-</div>
             <div class="value">?</div>
             <div class="plus button">+</div>
         </div>
         <div class="state">
-            <span class="users">?</span> online
+            <span class="users">?</span> currently rating jokes
         </div>
         <script>
+
+
             var minus = document.querySelector('.minus'),
                 plus = document.querySelector('.plus'),
                 value = document.querySelector('.value'),
                 users = document.querySelector('.users'),
                 websocket = new WebSocket("ws://127.0.0.1:6789/");
-            minus.onclick = function (event) {
+            minus.onclick = function (event)
+            {
                 websocket.send(JSON.stringify({action: 'minus'}));
             }
-            plus.onclick = function (event) {
+            plus.onclick = function (event)
+            {
                 websocket.send(JSON.stringify({action: 'plus'}));
             }
-            websocket.onmessage = function (event) {
+            websocket.onmessage = function (event)
+            {
                 data = JSON.parse(event.data);
-                switch (data.type) {
+                switch (data.type)
+                {
+                    case 'joke':
+                        document.getElementById("q").innerHTML=data.joke.Q;
+                        document.getElementById("a").innerHTML=data.joke.A;
+                        break;
                     case 'state':
                         value.textContent = data.value;
                         break;
                     case 'users':
-                        users.textContent = (
+                        users.textContent =
+                        (
                             data.count.toString() + " user" +
                             (data.count == 1 ? "" : "s"));
                         break;
                     default:
-                        console.error(
-                            "unsupported event", data);
+                        console.error("unsupported event", data);
                 }
             };
         </script>
